name:                react-flux-enzyme
version:             0.1.0.0
-- synopsis:
description:         A Haskell wrapper that allows to test react-flux with Airbnb's Enzyme, a JavaScript testing wrapper for React.js.
homepage:            https://github.com/githubuser/react-flux-enzyme#readme
license:             BSD3
license-file:        LICENSE
author:              Nicole Rauch
maintainer:          info@nicole-rauch.de
copyright:           2017 Nicole Rauch
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options: -j -Wall -Werror
  build-depends:
      aeson
    , base >= 4.7 && < 5
    , ghcjs-base
    , react-hs
    , string-conversions
  exposed-modules:
      React.Flux.Enzyme
      React.Flux.Enzyme.Class
      React.Flux.Enzyme.Class.Internal
      React.Flux.Enzyme.Core
      React.Flux.Enzyme.ReactWrapper
      React.Flux.Enzyme.ShallowWrapper
  default-language:    Haskell2010

test-suite react-flux-enzyme-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , react-flux-enzyme
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/NicoleRauch/react-flux-enzyme
